updating error handling

--- a/views/about.pug
+++ b/views/about.pug
@@ -11,23 +11,17 @@ block content
     .inner-wrapper.flex-row-wrap.two-col
       .about-intro-box.box
 
-        //- Replace with your name
         h1 Jonathan Drake
 
-        //- Feel free to personalize the title below
         p Full Stack JavaScript Developer
-
 
         .about-bio
 
-          //- Replace the boilerplate below with your best elevator pitch
-          p I make stuff.  Usually it's out of wood (like carving my self-portrait), or metal, but I recently got the itch to make things with code. Check out what I've made so far!
-
+          p I make stuff.  Usually it's out of wood (like carving my self-portrait), or metal, or plastic, (or legos if I'm playing with my daughters), but I recently got the itch to make things with code. So far, I've been pleasantly surprised at how few bandaids are required when coding... Check out what I've made so far!
 
       .skills-contact-box.box
         h6 Skills
 
-        //- Replace skills below with your own skills — at this point, you should be able to list as many as ten skills
         ul
           li HTML
           li CSS
@@ -43,15 +37,13 @@ block content
 
         h6 Contact Info
 
-        //- Replace with your own contact info - feel free to use fake information if you prefer
         ul
           li 555-555-1234
           li email@email.com
 
-        //- Add URLs to the hrefs below to link to your social media accounts - feel free to use non-personal links to social media home pages if you prefer
-        a.btn-link(href='') LinkedIn
-        a.btn-link(href='') GitHub
-        a.btn-link(href='') Twitter
+        a.btn-link(href='https://www.linkedin.com/home', target="_blank") LinkedIn
+        a.btn-link(href='https://github.com/willstutely', target="_blank") GitHub
+        a.btn-link(href='https://twitter.com', target="_blank") Twitter
 
     nav.nav
       a(href='/')
