--- a/views/project.pug
+++ b/views/project.pug
@@ -10,35 +10,22 @@ block content
   article.portfolio-projects
     .inner-wrapper.flex-row-wrap.two-col
       .project-info-box.box
-
-        //- Use the info in your data file and the comments below to complete this template
-
-        //- Use interpolation to dynamically add the project title
         h1= project.project_name
-
-        //- Use interpolation to dynamically add the project description
-        p= project.description 
+        p #{project.description}
 
       .project-tech-links-box.box
         h6 Technologies
         ul
-
-          //- Use an `each` iterator and interpolation to dynamically replace the li tags below with the technologies listed for this project
           each technology in project.technologies
-            li= technology
+            li #{technology}
          
-
-        //- Add the href values to the links below
         a.btn-link(href='') Live Demo
-        a.btn-link(href='') GitHub Repo
+        a.btn-link(href=`${project.github_link}`, target= "_blank") GitHub Repo
 
     .project-img-box.box
-
-      //- Replace the URLs in the src attributes below with interpolated template literals to dynamically add your project images, and add descriptions to the alt attributes
       each image in project.image_urls
         img.project-img(src=`${image[0]}`, alt=`${image[1]}`)
       
-
     nav.nav
       a(href='/')
         span &larr;
