--- a/views/error.pug
+++ b/views/error.pug
@@ -4,7 +4,7 @@ block content
     article.portfolio-projects
         .inner-wrapper.flex-row-wrap.two-col
             .project-info-box.box
-                h1 Whoops... the page you're looking for can't be found
+                h1 #{error.message}
                 p Here's my dog in timeout to help you relax.  Click her picture to be redirected to the home page
                 a(href='/')
                     img.project-img(src='/static/images/pippin.jpg')
