--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,6 +15,7 @@ html(lang="en" dir="ltr")
         br
         .thumbnail-box
           img.thumbnail(src='/static/images/selfPortrait.png', alt='selfPortrait')
+          img.thumbnail(src='/static/images/portraitReference.png', alt='theRealMe')
         .dev-intro-box
           h5 Jonathan Drake
           p I'm a husband and father who magically finds time to create things, whether it's woodworking/metal fabricating, or in the digital realm. Dogs make me use a voice I'm not proud of...
@@ -24,5 +25,7 @@ html(lang="en" dir="ltr")
         .header-info-box
           button#menu-icon.menu-icon(type='button' data-toggle='my-info')
           span Jonathan Drake
+
       block content
+
   script(src='/static/js/script.js')
