--- a/views/page-not-found.pug
+++ b/views/page-not-found.pug
@@ -7,5 +7,5 @@ block content
                 h1 #{error.message}
                 p Here's my dog in timeout to help you relax.  Click her picture to be redirected to the home page
                 a(href='/')
-                    img.project-img(src='/static/images/pippin.jpg')
+                    img.error-img(src='/static/images/pippin.jpg')
             
