--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -108,6 +108,7 @@ nav {
   width: 100%;
   padding: 20px;
   border-bottom: 1px solid #eaeaea;
+  background-color: #999;
 }
 
 nav a {
@@ -119,7 +120,7 @@ nav a {
   font-style: italic;
   letter-spacing: 2.5px;
   text-transform: uppercase;
-  color: #555; 
+  color: rgb(253, 250, 250); 
 }
 
 nav a span {
@@ -303,6 +304,7 @@ Changing bio thumbnail image with hover
   margin-bottom: 15px;
   border: 4px solid #fff;
   box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
+  background-color: #999;
 }
 
 .error-img {
